Sandbox snapshot commit

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ input {
   display: inline-block;
   margin: 0.5rem;
   padding: 0.6rem 1.2rem;
-  background-color: #4f46e5;
+  background-color: #e54696;
   color: white;
   border: none;
   border-radius: 8px;
