--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ input {
 }
 
 .btn {
-  background-color: #7cec48;
+  background-color: #5848ec;
   color: white;
   padding: 0.6rem 1.5rem;
   margin: 0.5rem;
@@ -42,7 +42,7 @@ input {
 }
 
 .btn:hover {
-  background-color: #4bdb27;
+  background-color: #4827db;
 }
 
 .btn.back {
@@ -55,7 +55,7 @@ input {
 
 /* ✅ Reset Button Specific Styling */
 .btn-reset {
-  background-color: #fc19a5;
+  background-color: #fc4619;
   color: white;
   padding: 0.6rem 1.5rem;
   margin-top: 1rem;
