--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,24 @@ footer.copyright {
   margin-right: auto;
 }
 
+.version-info {
+  margin-top: 0.5rem;
+  font-size: 0.85rem;
+  color: #555;
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.version-info a {
+  color: #347bff;
+  text-decoration: none;
+}
+
+.version-info a:hover {
+  text-decoration: underline;
+}
 
 /* Add this to your CSS */
 .exam-title {
